Return IOption/IResult to require less casting
It is of course still possible to use new Ok() or new Some() when needed,
this change is more aligned with the common case (you're not supposed to return the concrete version, because at that point you might as well just return the value without the wrapper)

--- a/SaferVariants/SaferVariants.csproj
+++ b/SaferVariants/SaferVariants.csproj
@@ -3,5 +3,22 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
+    
+    <PropertyGroup>
+        <!-- NuGet stuff -->
+        <PackageId>SaferVariants</PackageId>
+        <PackageVersion>1.1.0</PackageVersion>
+        <Title>SaferVariants</Title>
+        <Authors>Carl Erik Patrik Iwarson</Authors>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/Szune/SaferVariants</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Szune/SaferVariants</RepositoryUrl>
+        <Description>
+            An alternative to returning null and throwing exceptions as indications of a value being present and errors occurring.
+        </Description>
+        <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
+        <Copyright>Copyright © 2021 Carl Erik Patrik Iwarson</Copyright>
+    </PropertyGroup>
 
 </Project>
